samples/_failures_safe/1761424633_7a647a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_03a7ed4d.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_03a7ed4d.c:154:32: error: missing terminating " character
  154 |         case TOKEN_EOF: return "
      |                                ^
./samples/SAFE/__tmp_03a7ed4d.c:154:9: error: expected expression at end of input
  154 |         case TOKEN_EOF: return "
      |         ^~~~
./samples/SAFE/__tmp_03a7ed4d.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_03a7ed4d.c:154:9: error: expected declaration or statement at end of input
